enable the use of .env file